workflow/staging/kustomize/base/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: max-one.local:5001/courses/nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: max-one.local:5001/courses/memcached
        ports:
        - containerPort: 11211
          name: memcache
        readinessProbe:
          tcpSocket:
            port: 11211
          initialDelaySeconds: 30
          periodSeconds: 60
        livenessProbe:
          tcpSocket:
            port: 11211
          initialDelaySeconds: 30
          periodSeconds: 60

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: varnish
  labels:
    app: varnish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
      - name: varnish
        image: max-one.local:5001/courses/varnish
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: max-one.local:5001/courses/app
        resources:
          limits:
            memory: "1Gi"
          requests:
            memory: "1Gi"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
          - name: uploads
            mountPath: /app/pub/app/uploads
          - name: automysqlbackup-backup
            mountPath: /backup/db
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 2
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: app-uploads-pvc
        - name: automysqlbackup-backup
          persistentVolumeClaim:
            claimName: automysqlbackup-backup-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: max-one.local:5001/courses/rabbitmq
        ports:
        - containerPort: 5672
          name: rabbitmq
        - containerPort: 15672
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/lib/rabbitmq
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 120
          periodSeconds: 60
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 120
          periodSeconds: 60
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: rabbitmq-data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: max-one.local:5001/courses/redis
        ports:
        - containerPort: 6379
          name: redis
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 60
          periodSeconds: 60
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 60
          periodSeconds: 60

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: es
  labels:
    app: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: es
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: es
        image: max-one.local:5001/courses/es
        resources:
          limits:
            memory: "1500Mi"
          requests:
            memory: "1500Mi"
        ports:
        - containerPort: 9200
          name: http
        readinessProbe:
          tcpSocket:
            port: 9200
          initialDelaySeconds: 120
          periodSeconds: 60
        livenessProbe:
          tcpSocket:
            port: 9200
          initialDelaySeconds: 120
          periodSeconds: 60
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: es-data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: max-one.local:5001/courses/db
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "512Mi"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: db-data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: max-one.local:5001/courses/phpmyadmin
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60


---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: automysqlbackup
  labels:
    app: automysqlbackup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automysqlbackup
  template:
    metadata:
      labels:
        app: automysqlbackup
    spec:
      containers:
        - name: automysqlbackup
          image: max-one.local:5001/courses/automysqlbackup
          volumeMounts:
            - name: backup
              mountPath: /backup
      volumes:
        - name: backup
          persistentVolumeClaim:
            claimName: automysqlbackup-backup-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: courses
  name: borg
  labels:
    app: borg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borg
  template:
    metadata:
      labels:
        app: borg
    spec:
      containers:
        - name: borg
          image: max-one.local:5001/courses/borg
          volumeMounts:
            - name: automysqlbackup-backup
              mountPath: /var/borg/automysqlbackup/backup
            - name: app-uploads
              mountPath: /var/borg/app/uploads
      volumes:
        - name: automysqlbackup-backup
          persistentVolumeClaim:
            claimName: automysqlbackup-backup-pvc
        - name: app-uploads
          persistentVolumeClaim:
            claimName: app-uploads-pvc
