workflow/staging/kustomize/base/ingresses.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: courses
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "false"
spec:
  rules:
  - host: courses.maxxx.pro
    http:
      paths:
        - path: /
          backend:
            serviceName: varnish
            servicePort: http
